Change location of email templates to /resources directory